--- a/gestor/vercel.json
+++ b/gestor/vercel.json
@@ -1,27 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "gestor/gestor/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "gestor/gestor/wsgi.py"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "api/index.py", "use": "@vercel/python" },
+    { "src": "gestor/gestor/static/**/*", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/static/(.*)", "dest": "/gestor/gestor/static/$1" },
+    { "src": "/(.*)", "dest": "/api/index.py" }
+  ]
+}
