--- a/gestor/vercel.json
+++ b/gestor/vercel.json
@@ -2,25 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "gestor/gestor/wsgi.py",
+      "src": "gestor/manage.py",
       "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
-      }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "/gestor/staticfiles_build/static/$1"
     },
     {
       "src": "/(.*)",
